# Hashish

./: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  configure  configure.in  index.html  launch.rc
src/: Hashish-1.1a-1.spec  Makefile.am  Makefile.in  Makefile.rpm  gnu_small_trans.xpm  hashish-1.0-1.spec  hashish_wdr.cpp  hashish_wdr.h  main.cpp
win32/: Hashish.dsp  Hashish.dsw  Hashish.vcproj  change.txt  gnu.txt  hashish_setup_gen.nsi  launch.rc  readme.txt
