AC_PREREQ(2.57)
AC_INIT(src/main.cpp)
AM_INIT_AUTOMAKE(hashish, 1.1b)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL

dnl check for wxWindows installation¤
AM_PATH_WXCONFIG(2.4.1,wxOK=1)

if test "$wxOK" != 1; then
   AC_MSG_ERROR([
	   YardSale requires wxWindows to be installed on your system
	   but wx-config script couldn't be found.

	   Please check that wx-config is in PATH, the directory
	   where wxWindows libraries are installed (returned by
	   'wx-config --libs' command) is in LD_LIBRARY_PATH or
	   equivalent variable and wxWindows version is 2.5.1 or above.
   ])
fi

dnl normal linking mode is fully dynamic

AC_CONFIG_FILES([Makefile
                 src/Makefile
		 ])
AC_OUTPUT
