INCLUDES = -Icrypto/ -I.

bin_PROGRAMS = hashish

hashish_SOURCES = \
   main.cpp \
   hashish_wdr.cpp \
   hashish_wdr.h\
   crypto/algparam.cpp \
   crypto/base64.cpp \
   crypto/basecode.cpp \
   crypto/crc.cpp \
   crypto/cryptlib.cpp \
   crypto/files.cpp \
   crypto/filters.cpp \
   crypto/haval.cpp \
   crypto/hex.cpp \
   crypto/iterhash.cpp \
   crypto/md2.cpp \
   crypto/md5.cpp \
   crypto/misc.cpp \
   crypto/mqueue.cpp \
   crypto/panama.cpp \
   crypto/pch.cpp \
   crypto/ripemd.cpp \
   crypto/sha.cpp \
   crypto/strciphr.cpp \
   crypto/tiger.cpp \
   crypto/simple.cpp \
   crypto/queue.cpp \
   crypto/fips140.cpp \
   crypto/trdlocal.cpp \
   crypto/tigertab.cpp

hashish_CXXFLAGS = $(WX_CXXFLAGS)
hashish_LDADD = $(WX_LIBS)

EXTRA_DIST = \
   Hashish-1.1a-1.spec \
   Makefile.rpm \
   gnu_small_trans.xpm \
   gnu_small_trans.bmp \
   crypto/algparam.h \
   crypto/argnames.h \
   crypto/base64.h \
   crypto/basecode.h \
   crypto/config.h \
   crypto/crc.h \
   crypto/cryptlib.h \
   crypto/files.h \
   crypto/filters.h \
   crypto/fips140.h \
   crypto/fltrimpl.h \
   crypto/haval.h \
   crypto/hex.h \
   crypto/iterhash.h \
   crypto/md2.h \
   crypto/md5.h \
   crypto/misc.h \
   crypto/mqueue.h \
   crypto/panama.h \
   crypto/pch.h \
   crypto/queue.h \
   crypto/ripemd.h \
   crypto/secblock.h \
   crypto/seckey.h \
   crypto/sha.h \
   crypto/simple.h \
   crypto/smartptr.h \
   crypto/strciphr.h \
   crypto/tiger.h \
   crypto/trdlocal.h \
   crypto/words.h
